# ts-tool

./: .gitignore  CMakeLists.txt  README.md
cmake/: ALL_BUILD.vcxproj.user.in  copy_helper.cmake  install_helper.cmake
cmake/Modules/: ConfigBins.cmake  CopyMSVCBins.cmake  ObsHelpers.cmake  OpensslBins.cmake  TsBins.cmake  XlsxBins.cmake
config/: config.xml  country.xlsx  download.txt  region_code.xlsx  translate.xlsx
ts/: CMakeLists.txt  config.cpp  config.h  download_excel.cpp  download_excel.h  excel_rw.cpp  excel_rw.h  excel_to_ts.cpp  excel_to_ts.h  translate_model.cpp  ts_rw.cpp  ts_rw.h
tstool/: CMakeLists.txt  main.cpp  tstool_app.cpp  tstool_app.h
tstool/download/: CMakeLists.txt  download_excel.cpp  download_excel.h  excel_rw.cpp  excel_rw.h  excel_to_ts.cpp  excel_to_ts.h  translate_model.cpp  translate_model.h  ts_rw.cpp  ts_rw.h
tstool/forms/: CMakeLists.txt  tstool.qrc  tstool_main_window.qml
tstoolui/: CMakeLists.txt  main.cpp  tstool_app.h  tstoolui_app.cpp  tstoolui_app.h
xlsx/: CMakeLists.txt
